Added smtp email function for contact form

--- a/general_templates/base_portfolio_template.html
+++ b/general_templates/base_portfolio_template.html
@@ -95,13 +95,12 @@
                             <a href="https://www.facebook.com/ben.gab.963" target="_blank"><i class="fa-brands fa-facebook fa-2xl" style="color:#00A6FB"></i></a>
                         </div>
                     </div>
-                    <form>
-                        <input type="text" placeholder="Name" required>
+                    <div id="form">
                         <input type="email" placeholder="Email" required>
                         <input type="text" placeholder="Subject" required>
                         <textarea placeholder="Message"></textarea>
-                        <button id="msg-btn">Send Message</button>
-                    </form>
+                        <button id="msg-btn" style="cursor:pointer;" role="submit">Send Message</button>
+                    </div>
                 </div>
             </div>
         </div>
