Implemented toast notification

--- a/general_templates/base_portfolio_template.html
+++ b/general_templates/base_portfolio_template.html
@@ -11,8 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/c076662d51.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
     <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'toast.css' %}"
 </head>
 <body>
     <span id="hpsp"></span>
@@ -108,6 +110,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     {% block scripts %}
     {% endblock %}
     <script src="{% static 'javascript/main.js' %}"></script>
